# churn-prediction

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
docs/: deployment_architecture.md  ml_canvas.md  model_card.md  monitoring_plan.md  report.md
models/: mlp_churn.pt  mlp_churn_meta.json  preprocessor.pkl
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: churn-api.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
notebooks/: 01_eda.ipynb  02_modeling.ipynb
scripts/: migrate_mlflow_paths.py  sample_simulation.txt  simulate_traffic.py
src/: utils.py
src/api/: main.py  metrics.py  schemas.py
src/data/: preprocessing.py
src/features/: preprocessing.py
src/models/: baseline.py  mlp.py  mlp_baselines.py  train.py
tests/: conftest.py  test_api.py  test_data_preprocessing.py  test_features_preprocessing.py  test_integration.py  test_mlp.py  test_train.py
