[project]
name = "churn-prediction"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "mlflow>=2.10",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3", "jupyter>=1.0", "ipykernel>=6.0", "httpx>=0.27"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
