[project]
name = "churn-prediction"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "mlflow>=2.10",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "joblib>=1.3",
    "pandera>=0.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-env>=1.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "DISABLE_PANDERA_IMPORT_WARNING=True",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade
ignore = ["E501"]   # formatter handles line length

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
exclude = [".*\\.ipynb$"]

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "pandas.*",
    "mlflow.*",
    "pandera.*",
]
ignore_missing_imports = true
